--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.instagram.com/">Instagram</a>
       <p class = "footer">© 2021 Anshul Chauhan @ My First Website.</p>
     </div>
 
