--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>If you also love Travelling as much as i do.</h3>
+          <h3 class ="Git">If you also love Travelling as much as i do.</h3>
           <p class="contact-message">Love travelling? Let's plan a trip together! We can do WFH while travelling😋! .</p>
           <a class="btn" href="mailto:canshul.8055@gmail.com">CONTACT ME</a>
 
