--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-              <img class="WebDev"  src="images/webDev.png" alt="WebDev">
+              <img class="WebDev" src="images/WebDev.png" alt="WebDev">
               <h3>Design & Frontend Development</h3>
               <p class="Des">I stared learning Frontend Web Development and in the process my interest shift on the UI UX design as well
                 which will help me to apply those design principles to create a beautiful Website.
@@ -44,7 +44,7 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3 class ="Git">If you also love Travelling as much as i do.</h3>
+          <h3>If you also love Travelling as much as i do.</h3>
           <p class="contact-message">Love travelling? Let's plan a trip together! We can do WFH while travelling😋! .</p>
           <a class="btn" href="mailto:canshul.8055@gmail.com">CONTACT ME</a>
 
@@ -55,8 +55,8 @@
 
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.instagram.com/">Instagram</a>
-      <p class = "footer">© 2021 Anshul Chauhan @ My First Website.</p>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class = "copyright">© 2021 Anshul Chauhan @ My First Website.</p>
     </div>
 
   </body>
