--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-              <img class="WebDev" src="images/WebDev.png" alt="WebDev">
+              <img class="WebDev" src="WebDev.png" alt="WebDev">
               <h3>Design & Frontend Development</h3>
               <p class="Des">I stared learning Frontend Web Development and in the process my interest shift on the UI UX design as well
                 which will help me to apply those design principles to create a beautiful Website.
